--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "^3.0.1",
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
+    "reselect": "^4.1.5",
     "sass": "^1.48.0",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
